plugins {
    id "java-library"
    id "org.embulk.embulk-plugins" version "0.7.0"
}

group = "org.embulk.decoder"
version = "0.3.0"
description = "Decodes files by piping each input through an external command."

sourceCompatibility = 8
targetCompatibility = 8
compileJava.options.encoding = "UTF-8"

repositories {
    mavenCentral()
}

embulkPlugin {
    mainClass = "org.embulk.decoder.command.CommandDecoderPlugin"
    category = "decoder"
    type = "command"
}

dependencies {
    compileOnly "org.embulk:embulk-spi:0.11"

    implementation "org.embulk:embulk-util-config:0.5.0"
    implementation "org.embulk:embulk-util-file:0.2.0"

    testImplementation "junit:junit:4.13.2"
    testImplementation "org.embulk:embulk-spi:0.11"
    testImplementation "org.embulk:embulk-core:0.11.0"
    testImplementation "org.embulk:embulk-deps:0.11.0"
    testImplementation "org.embulk:embulk-junit4:0.11.0"
}

gem {
    authors = [ "ksss" ]
    summary = "Command decoder plugin for Embulk"
    description = "Decodes input by piping each file through an external command."
    email = [ "co000ri@gmail.com" ]
    licenses = [ "MIT" ]
    homepage = "https://github.com/ksss/embulk-decoder-command"
}
